RESOLVED FIXED193765
webkitpresentationmodechanged is fired twice when exiting picture in picture
https://bugs.webkit.org/show_bug.cgi?id=193765
Summary webkitpresentationmodechanged is fired twice when exiting picture in picture
Oded
Reported 2019-01-24 02:45:11 PST
go to: https://codepen.io/anon/pen/Noqmvx (on safari) 1. start playing the video. 2. click on the picture in picture icon. 3. click on the 'x' (close) button in the picture in picture window. There will be 3 events of 'webkitpresentationmodechanged': 1. one for entering PiP. 2. two for exiting PiP. I would expect to have 1 event for the exit.
Attachments
A WIP patch (2.22 KB, patch)
2019-08-21 18:09 PDT, Peng Liu
no flags
A patch to fix it (6.00 KB, patch)
2019-08-23 11:28 PDT, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2019-01-24 13:39:43 PST
Peng Liu
Comment 2 2019-08-21 18:09:32 PDT
Created attachment 376959 [details] A WIP patch
EWS Watchlist
Comment 3 2019-08-21 18:12:24 PDT
Attachment 376959 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:9: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peng Liu
Comment 4 2019-08-23 11:28:06 PDT
Created attachment 377137 [details] A patch to fix it
WebKit Commit Bot
Comment 5 2019-08-27 08:23:52 PDT
Comment on attachment 377137 [details] A patch to fix it Clearing flags on attachment: 377137 Committed r249141: <https://trac.webkit.org/changeset/249141>
WebKit Commit Bot
Comment 6 2019-08-27 08:23:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.